--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/fragmentContainer"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,5 +8,11 @@
     tools:context=".ui.MainActivity">
 
     <include layout="@layout/toolbar" />
+
+<!--    <fragment-->
+<!--        android:id="@+id/fragmentToShow"-->
+<!--        android:name="com.example.asusdownloader.ui.fragment.Dashboard"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent" />-->
 
 </LinearLayout>
