Add dagger and fix some logic problems.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
 
 <!--    <fragment-->
 <!--        android:id="@+id/fragmentToShow"-->
-<!--        android:name="com.example.asusdownloader.ui.fragment.Dashboard"-->
+<!--        android:name="com.example.asusdownloader.ui.fragment.dashboard.Dashboard"-->
 <!--        android:layout_width="match_parent"-->
 <!--        android:layout_height="match_parent" />-->
 
