--- a/app/src/main/res/menu/rv_menu.xml
+++ b/app/src/main/res/menu/rv_menu.xml
@@ -8,9 +8,9 @@
     <item
         android:id="@+id/pauseMenuItem"
         android:title="@string/pauseItem"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="always"/>
     <item
         android:id="@+id/removeMenuItem"
         android:title="@string/removeItem"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="always"/>
 </menu>
